--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
       margin-right: 0.28em;
     }
     .about-banner {
-      background: url('Rahul  landsat.png') center center/cover no-repeat;
+      background: url('Rahul landsat.png') center center/cover no-repeat;
       min-height: 220px;
       border-radius: 14px;
       margin: 2.5rem 0 1.5rem 0;
@@ -214,7 +214,7 @@
     </div>
     <nav>
       <a href="#" class="active">Home</a>
-      <a href="#about" id="about-link">About me</a>
+      <a href="#about-section" id="about-link">About me</a>
       <a href="#">Publications</a>
       <a href="#">Monitoring</a>
       <a href="#">Resources</a>
@@ -242,7 +242,6 @@
           <a href="https://orcid.org/0009-0004-7391-0731" title="ORCID" target="_blank"><i class="fab fa-orcid"></i></a>
           <a href="https://scholar.google.com/citations?user=YOUR_GOOGLE_SCHOLAR_ID" title="Google Scholar" target="_blank"><i class="fas fa-graduation-cap"></i></a>
           <a href="https://www.researchgate.net/profile/YOUR_RESEARCHGATE_ID" title="ResearchGate" target="_blank"><i class="fab fa-researchgate"></i></a>
-          <!-- Add social/profile links as needed -->
         </div>
         <div>
           <span style="color:#004cbb;font-weight:600;">Mobile:</span> 9636525194 <br>
@@ -273,31 +272,121 @@
       </div>
     </div>
   </div>
+  
+  <!-- About Me Section with Education & Awards -->
+  <section id="about-section">
+    <div style="max-width:1100px;margin:2.5em auto 1.5em auto;padding:0 1em;">
+      <hr style="margin-bottom:2em;">
+      <div style="font-family:'Georgia',serif;font-size:1.3rem;font-weight:700;color:#273964;letter-spacing:0.5px;margin-bottom:0.7em;">EDUCATION</div>
+      <ul style="font-size:1.06rem;margin-bottom:2em;list-style-type:disc;padding-left:1.2em;line-height:1.7;">
+        <li>
+          <span style="color:#254b97;font-weight:600;">Ph.D. in Environmental Science & Engineering</span> | Indian Institute of Technology (ISM), Dhanbad <br>
+          <span style="color:#666;font-size:0.98em;">July 2023 – Present</span>
+        </li>
+        <li>
+          <span style="color:#254b97;font-weight:600;">PG Diploma in Remote Sensing & GIS</span> | Banaras Hindu University (BHU), Varanasi <br>
+          <span style="color:#666;font-size:0.98em;">Aug 2022 – July 2023 &nbsp;&nbsp; (78.99%)</span>
+        </li>
+        <li>
+          <span style="color:#254b97;font-weight:600;">M.Sc. in Environmental Science</span> | Central University of Rajasthan, Ajmer <br>
+          <span style="color:#666;font-size:0.98em;">June 2019 – July 2021 &nbsp;&nbsp; (75.34%)</span>
+        </li>
+        <li>
+          <span style="color:#254b97;font-weight:600;">B.Sc. in Environmental Science</span> | Central University of Rajasthan, Ajmer <br>
+          <span style="color:#666;font-size:0.98em;">June 2016 – May 2019 &nbsp;&nbsp; (57.06%)</span>
+        </li>
+        <li>
+          <span style="color:#254b97;font-weight:600;">12th (Higher Secondary)</span> | Amarpur Inter College, Lakhisarai (BSEB Board) <br>
+          <span style="color:#666;font-size:0.98em;">May 2016 &nbsp;&nbsp; (61.40%)</span>
+        </li>
+        <li>
+          <span style="color:#254b97;font-weight:600;">10th (Matriculation)</span> | V.B. Balika Vidyapith, Lakhisarai (CBSE Board) <br>
+          <span style="color:#666;font-size:0.98em;">May 2013 &nbsp;&nbsp; (89.30%)</span>
+        </li>
+        <li>
+          <span style="color:#254b97;font-weight:600;">UGC NET Qualified (2022)</span>
+        </li>
+      </ul>
+      <div style="font-family:'Georgia',serif;font-size:1.3rem;font-weight:700;color:#273964;letter-spacing:0.5px;margin-bottom:0.7em;">AWARDS &amp; ACHIEVEMENTS</div>
+      <ul style="font-size:1.06rem;list-style-type:disc;padding-left:1.2em;line-height:1.7;">
+        <li>
+          <span style="color:#254b97;font-weight:600;">NGP-DST Summer School on Geospatial Technologies</span> | IIT (ISM) Dhanbad &nbsp; <span style="color:#666;font-size:0.98em;">June 2024</span>
+        </li>
+        <li>
+          <span style="color:#254b97;font-weight:600;">Green Skill Development Programme (Level 5, NSQF)</span> | MoEFCC &nbsp; <span style="color:#666;font-size:0.98em;">April 2022</span>
+        </li>
+        <li>
+          <span style="color:#254b97;font-weight:600;">UGC NET Qualified</span> | Environmental Science &nbsp; <span style="color:#666;font-size:0.98em;">2022</span>
+        </li>
+      </ul>
+    </div>
+  </section>
+  
+  <!-- New About Me Section -->
+  <section id="aboutme" style="background: #fff; padding: 0;">
+    <!-- Banner with multi-image and About text overlay -->
+    <div style="display:flex;overflow:hidden;height:230px;position:relative;">
+      <img src="img1.jpg" style="width:16.6%;object-fit:cover;height:230px;">
+      <img src="img2.jpg" style="width:16.6%;object-fit:cover;height:230px;">
+      <img src="img3.jpg" style="width:16.6%;object-fit:cover;height:230px;">
+      <img src="img4.jpg" style="width:16.6%;object-fit:cover;height:230px;">
+      <img src="img5.jpg" style="width:16.6%;object-fit:cover;height:230px;">
+      <img src="img6.jpg" style="width:16.6%;object-fit:cover;height:230px;">
+      <div style="position:absolute;left:0;top:0;width:100%;height:100%;display:flex;justify-content:center;align-items:center;">
+        <span style="font-size:2.7rem;font-family:'Playfair Display',serif;color:#fff;font-weight:700;text-shadow:0 2px 18px #222;">About me</span>
+      </div>
+    </div>
+    <!-- Logos of institutes -->
+    <div style="max-width:960px;margin:2.3rem auto 0 auto;display:flex;justify-content:center;align-items:center;gap:2.3rem;flex-wrap:wrap;">
+      <img src="ism_logo.png" alt="IIT ISM Dhanbad" style="height:85px;">
+      <img src="bhu_logo.png" alt="BHU" style="height:85px;">
+      <img src="ugcnet_logo.png" alt="UGC NET" style="height:85px;">
+    </div>
+    <!-- Education Timeline/Block -->
+    <div style="max-width:900px;margin:2.5rem auto 0 auto;padding:0 1rem;">
+      <h2 style="font-family:'Playfair Display',serif;font-size:1.45rem;color:#114674;margin-bottom:1.3rem;">EDUCATION</h2>
+      <ul style="list-style:square;padding-left:1.2em;font-size:1.11rem;line-height:1.65;">
+        <li><b>PhD (Ongoing)</b> – Environmental Science & Engineering, IIT (ISM) Dhanbad <span style="color:#bc2222;font-size:0.95em;">(2022–present)</span></li>
+        <li><b>UGC NET Qualified</b> (2022) – Environmental Sciences</li>
+        <li><b>PG Diploma</b> – Remote Sensing & GIS, Banaras Hindu University (BHU), Varanasi</li>
+        <li><b>Integrated MSc</b> – Environmental Science</li>
+      </ul>
+      <h2 style="font-family:'Playfair Display',serif;font-size:1.35rem;color:#114674;margin-top:2.5rem;">EXPERIENCE / INTERESTS</h2>
+      <ul style="list-style:disc;padding-left:1.2em;font-size:1.07rem;line-height:1.6;">
+        <li>Water Security & Climate Change Modeling</li>
+        <li>Hydrology & Hydroclimatology</li>
+        <li>Remote Sensing, GIS & Geospatial Analytics</li>
+        <li>Machine Learning (Python, R), Data Analysis</li>
+      </ul>
+    </div>
+  </section>
+  
+  <!-- Contact Section with Google Map and Details -->
   <section id="contact" style="background: #f4f4f4;">
-  <div style="max-width:1300px;margin:0 auto;padding:2.5rem 1rem;display:flex;align-items:center;justify-content:center;gap:2.5rem;flex-wrap:wrap;">
-    <div style="flex:1 1 380px;min-width:320px;">
-      <iframe 
-        src="https://www.google.com/maps?q=Department+of+Environmental+Science+and+Engineering,+IIT+(ISM)+Dhanbad&output=embed"
-        width="100%" height="310" style="border:0;border-radius:14px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    <div style="max-width:1300px;margin:0 auto;padding:2.5rem 1rem;display:flex;align-items:center;justify-content:center;gap:2.5rem;flex-wrap:wrap;">
+      <div style="flex:1 1 380px;min-width:320px;">
+        <iframe 
+          src="https://www.google.com/maps?q=Department+of+Environmental+Science+and+Engineering,+IIT+(ISM)+Dhanbad&output=embed"
+          width="100%" height="310" style="border:0;border-radius:14px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      </div>
+      <div style="flex:2 1 480px;min-width:320px;text-align:center;">
+        <h2 style="font-family:'Playfair Display',serif;text-align:center;font-size:2rem;margin-bottom:1.2rem;"><u>Contacts</u></h2>
+        <div style="font-size:1.13rem;color:#20222a;margin-bottom:1.2rem;">
+          <b style="color:#b71c1c;">Office:</b> <br>
+          Water Security and Climate Change lab <br>
+          Department of Environmental Science & Engineering<br>
+          IIT (ISM) Dhanbad, Jharkhand, INDIA
+        </div>
+        <div style="font-size:1.13rem;color:#20222a;margin-bottom:1.2rem;">
+          <b style="color:#b71c1c;">Mobile:</b><br>
+          (+91) 9636525194
+        </div>
+        <div style="font-size:1.13rem;color:#20222a;">
+          <b style="color:#b71c1c;">Email:</b><br>
+          <span>rahulevs01@gmail.com</span>
+        </div>
+      </div>
     </div>
-    <div style="flex:2 1 480px;min-width:320px;text-align:center;">
-      <h2 style="font-family:'Playfair Display',serif;text-align:center;font-size:2rem;margin-bottom:1.2rem;"><u>Contacts</u></h2>
-      <div style="font-size:1.13rem;color:#20222a;margin-bottom:1.2rem;">
-        <b style="color:#b71c1c;">Office:</b> <br>
-        Water Security and Climate Change lab <br>
-        Department of Environmental Science & Engineering<br>
-        IIT (ISM) Dhanbad, Jharkhand, INDIA
-      </div>
-      <div style="font-size:1.13rem;color:#20222a;margin-bottom:1.2rem;">
-        <b style="color:#b71c1c;">Mobile:</b><br>
-        (+91) 9636525194
-      </div>
-      <div style="font-size:1.13rem;color:#20222a;">
-        <b style="color:#b71c1c;">Email:</b><br>
-        <span>rahulevs01@gmail.com</span>
-      </div>
-    </div>
-  </div>
-</section>
+  </section>
 </body>
 </html>
