--- a/index.html
+++ b/index.html
@@ -336,6 +336,15 @@
         <span style="font-size:2.7rem;font-family:'Playfair Display',serif;color:#fff;font-weight:700;text-shadow:0 2px 18px #222;">About me</span>
       </div>
     </div>
+    <!-- Horizontal form for user input -->
+    <div style="max-width:900px;margin:2.5rem auto 0 auto;padding:0 1rem;">
+      <form style="display:flex;gap:1.2rem;align-items:center;flex-wrap:wrap;background:#f7f9fa;padding:1.2em 1em 1em 1em;border-radius:12px;box-shadow:0 2px 12px rgba(60,60,60,0.07);margin-bottom:2.2rem;">
+        <input type="text" name="name" placeholder="Your Name" style="flex:1 1 180px;padding:0.7em 1em;border:1px solid #b7c2d6;border-radius:7px;font-size:1.07rem;">
+        <input type="email" name="email" placeholder="Your Email" style="flex:1 1 180px;padding:0.7em 1em;border:1px solid #b7c2d6;border-radius:7px;font-size:1.07rem;">
+        <input type="text" name="subject" placeholder="Subject" style="flex:2 1 220px;padding:0.7em 1em;border:1px solid #b7c2d6;border-radius:7px;font-size:1.07rem;">
+        <button type="submit" style="background:#254b97;color:#fff;font-weight:600;padding:0.7em 2.2em;border:none;border-radius:7px;font-size:1.07rem;cursor:pointer;transition:background 0.18s;">Send</button>
+      </form>
+    </div>
     <!-- Logos of institutes -->
     <div style="max-width:960px;margin:2.3rem auto 0 auto;display:flex;justify-content:center;align-items:center;gap:2.3rem;flex-wrap:wrap;">
       <img src="ism_logo.png" alt="IIT ISM Dhanbad" style="height:85px;">
