--- a/index.html
+++ b/index.html
@@ -326,16 +326,10 @@
   <section id="aboutme" style="background: #fff; padding: 0;">
     <!-- Banner with multi-image and About text overlay -->
     <div style="display:flex;overflow:hidden;height:230px;position:relative;">
-      <img src="img1.jpg" style="width:16.6%;object-fit:cover;height:230px;">
-      <img src="img2.jpg" style="width:16.6%;object-fit:cover;height:230px;">
-      <img src="img3.jpg" style="width:16.6%;object-fit:cover;height:230px;">
-      <img src="img4.jpg" style="width:16.6%;object-fit:cover;height:230px;">
-      <img src="img5.jpg" style="width:16.6%;object-fit:cover;height:230px;">
-      <img src="img6.jpg" style="width:16.6%;object-fit:cover;height:230px;">
       <div style="position:absolute;left:0;top:0;width:100%;height:100%;display:flex;justify-content:center;align-items:center;gap:2.5rem;">
-        <img src="IIT-ISM.png" alt="IIT ISM Dhanbad" style="height:70px;width:auto;box-shadow:0 2px 10px #222;border-radius:8px;background:#fff;padding:4px;">
-        <img src="bhu_logo.png" alt="BHU" style="height:70px;width:auto;box-shadow:0 2px 10px #222;border-radius:8px;background:#fff;padding:4px;">
-        <img src="curaj.jpg" alt="Central University of Rajasthan" style="height:70px;width:auto;box-shadow:0 2px 10px #222;border-radius:8px;background:#fff;padding:4px;">
+        <img src="IIT-ISM.png" alt="IIT ISM Dhanbad" style="height:164px;width:158px;box-shadow:0 2px 10px #222;border-radius:8px;background:#fff;padding:4px;">
+        <img src="bhu.jpg" alt="BHU" style="height:164px;width:158px;box-shadow:0 2px 10px #222;border-radius:8px;background:#fff;padding:4px;">
+        <img src="curaj.jpg" alt="Central University of Rajasthan" style="height:164px;width:158px;box-shadow:0 2px 10px #222;border-radius:8px;background:#fff;padding:4px;">
         <span style="font-size:2.7rem;font-family:'Playfair Display',serif;color:#fff;font-weight:700;text-shadow:0 2px 18px #222;">About me</span>
       </div>
     </div>
