--- a/index.html
+++ b/index.html
@@ -322,48 +322,49 @@
     </div>
   </section>
   
-  <!-- New About Me Section -->
-  <section id="aboutme" style="background: #fff; padding: 0;">
-    <!-- Banner with multi-image and About text overlay -->
-    <div style="display:flex;overflow:hidden;height:230px;position:relative;">
-      <div style="position:absolute;left:0;top:0;width:100%;height:100%;display:flex;justify-content:center;align-items:center;gap:2.5rem;">
-        <img src="IIT-ISM.png" alt="IIT ISM Dhanbad" style="height:164px;width:158px;box-shadow:0 2px 10px #222;border-radius:8px;background:#fff;padding:4px;">
-        <img src="bhu.jpg" alt="BHU" style="height:164px;width:158px;box-shadow:0 2px 10px #222;border-radius:8px;background:#fff;padding:4px;">
-        <img src="curaj.jpg" alt="Central University of Rajasthan" style="height:164px;width:158px;box-shadow:0 2px 10px #222;border-radius:8px;background:#fff;padding:4px;">
-        <span style="font-size:2.7rem;font-family:'Playfair Display',serif;color:#fff;font-weight:700;text-shadow:0 2px 18px #222;">About me</span>
+  <!-- LOGOS ROW: Below Banner -->
+  <div style="background:#fff;padding:1.7rem 0 1rem 0;display:flex;justify-content:center;align-items:center;gap:2.2rem;box-shadow:0 2px 10px rgba(30,60,130,0.07);">
+    <img src="IIT-ISM.png" alt="IIT ISM Dhanbad" style="height:70px;">
+    <img src="bhu_logo.png" alt="BHU Varanasi" style="height:70px;">
+    <img src="curaj.jpg" alt="Central University of Rajasthan" style="height:70px;">
+  </div>
+
+  <!-- ABOUT SECTION: Current + Previous Education -->
+  <section id="about-edu" style="background:#fafdff;padding:0 0 2.2rem 0;">
+    <div style="max-width:900px;margin:2.5rem auto 0 auto;padding:0 1rem;">
+      <h2 style="font-family:'Playfair Display',serif;font-size:1.4rem;color:#114674;margin-bottom:1.2rem;">About Me & Education</h2>
+      <div style="background:#fff;padding:1.5rem 1.3rem 1.3rem 1.3rem;border-radius:14px;box-shadow:0 2px 14px #e5ebfa;">
+        <h3 style="color:#273964;margin-bottom:1rem;font-size:1.1rem;">Current Education</h3>
+        <ul style="list-style:disc;padding-left:1.1em;font-size:1.08rem;line-height:1.7;">
+          <li>
+            <b>Ph.D. (Ongoing)</b> – Environmental Science & Engineering, <span style="color:#254b97;">IIT (ISM) Dhanbad</span>
+            <br><span style="color:#bc2222;font-size:0.95em;">2022–present</span>
+          </li>
+        </ul>
+        <h3 style="color:#273964;margin-bottom:1rem;margin-top:2.3rem;font-size:1.1rem;">Previous Education</h3>
+        <ul style="list-style:disc;padding-left:1.1em;font-size:1.08rem;line-height:1.7;">
+          <li>
+            <b>PG Diploma</b> – Remote Sensing & GIS, <span style="color:#254b97;">Banaras Hindu University (BHU), Varanasi</span>
+            <br><span style="color:#666;font-size:0.97em;">Aug 2022 – July 2023 (78.99%)</span>
+          </li>
+          <li>
+            <b>M.Sc.</b> – Environmental Science, <span style="color:#254b97;">Central University of Rajasthan, Ajmer</span>
+            <br><span style="color:#666;font-size:0.97em;">June 2019 – July 2021 (75.34%)</span>
+          </li>
+          <li>
+            <b>B.Sc.</b> – Environmental Science, <span style="color:#254b97;">Central University of Rajasthan, Ajmer</span>
+            <br><span style="color:#666;font-size:0.97em;">June 2016 – May 2019 (57.06%)</span>
+          </li>
+          <li>
+            <b>12th (Higher Secondary)</b> – Amarpur Inter College, Lakhisarai (BSEB Board)
+            <br><span style="color:#666;font-size:0.97em;">May 2016 (61.40%)</span>
+          </li>
+          <li>
+            <b>10th (Matriculation)</b> – V.B. Balika Vidyapith, Lakhisarai (CBSE Board)
+            <br><span style="color:#666;font-size:0.97em;">May 2013 (89.30%)</span>
+          </li>
+        </ul>
       </div>
-    </div>
-    <!-- Horizontal form for user input -->
-    <div style="max-width:900px;margin:2.5rem auto 0 auto;padding:0 1rem;">
-      <form style="display:flex;gap:1.2rem;align-items:center;flex-wrap:wrap;background:#f7f9fa;padding:1.2em 1em 1em 1em;border-radius:12px;box-shadow:0 2px 12px rgba(60,60,60,0.07);margin-bottom:2.2rem;">
-        <input type="text" name="name" placeholder="Your Name" style="flex:1 1 180px;padding:0.7em 1em;border:1px solid #b7c2d6;border-radius:7px;font-size:1.07rem;">
-        <input type="email" name="email" placeholder="Your Email" style="flex:1 1 180px;padding:0.7em 1em;border:1px solid #b7c2d6;border-radius:7px;font-size:1.07rem;">
-        <input type="text" name="subject" placeholder="Subject" style="flex:2 1 220px;padding:0.7em 1em;border:1px solid #b7c2d6;border-radius:7px;font-size:1.07rem;">
-        <button type="submit" style="background:#254b97;color:#fff;font-weight:600;padding:0.7em 2.2em;border:none;border-radius:7px;font-size:1.07rem;cursor:pointer;transition:background 0.18s;">Send</button>
-      </form>
-    </div>
-    <!-- Logos of institutes -->
-    <div style="max-width:960px;margin:2.3rem auto 0 auto;display:flex;justify-content:center;align-items:center;gap:2.3rem;flex-wrap:wrap;">
-      <img src="ism_logo.png" alt="IIT ISM Dhanbad" style="height:85px;">
-      <img src="bhu_logo.png" alt="BHU" style="height:85px;">
-      <img src="ugcnet_logo.png" alt="UGC NET" style="height:85px;">
-    </div>
-    <!-- Education Timeline/Block -->
-    <div style="max-width:900px;margin:2.5rem auto 0 auto;padding:0 1rem;">
-      <h2 style="font-family:'Playfair Display',serif;font-size:1.45rem;color:#114674;margin-bottom:1.3rem;">EDUCATION</h2>
-      <ul style="list-style:square;padding-left:1.2em;font-size:1.11rem;line-height:1.65;">
-        <li><b>PhD (Ongoing)</b> – Environmental Science & Engineering, IIT (ISM) Dhanbad <span style="color:#bc2222;font-size:0.95em;">(2022–present)</span></li>
-        <li><b>UGC NET Qualified</b> (2022) – Environmental Sciences</li>
-        <li><b>PG Diploma</b> – Remote Sensing & GIS, Banaras Hindu University (BHU), Varanasi</li>
-        <li><b>Integrated MSc</b> – Environmental Science</li>
-      </ul>
-      <h2 style="font-family:'Playfair Display',serif;font-size:1.35rem;color:#114674;margin-top:2.5rem;">EXPERIENCE / INTERESTS</h2>
-      <ul style="list-style:disc;padding-left:1.2em;font-size:1.07rem;line-height:1.6;">
-        <li>Water Security & Climate Change Modeling</li>
-        <li>Hydrology & Hydroclimatology</li>
-        <li>Remote Sensing, GIS & Geospatial Analytics</li>
-        <li>Machine Learning (Python, R), Data Analysis</li>
-      </ul>
     </div>
   </section>
   
