--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
       margin-right: 0.28em;
     }
     .about-banner {
-      background: url('Rahul landsat.png') center center/cover no-repeat;
+      background: url('landsat.jpg') center center/cover no-repeat;
       min-height: 220px;
       border-radius: 14px;
       margin: 2.5rem 0 1.5rem 0;
@@ -251,7 +251,7 @@
     </div>
     <div>
       <div class="intro">Hi, welcome to my website!</div>
-      <div class="about-banner"></div>
+      <div class="about-banner" style="background: url('landsat.jpg') center center/cover no-repeat; min-height: 220px; border-radius: 14px; margin: 2.5rem 0 1.5rem 0; box-shadow: 0 2px 16px rgba(60,60,60,0.11); display: flex; align-items: flex-end; justify-content: flex-start; position: relative;"></div>
       <div class="about-text">
         I am Rahul Kumar, currently a research scholar at IIT (ISM) Dhanbad in the Department of Environmental Science & Engineering.
         <br>
@@ -264,72 +264,23 @@
       </div>
       <div class="research-int">Research Interests:</div>
       <div class="ri-tags">
-        <div class="ri-tag"><i class="fas fa-globe"></i> Water Security</div>
+        <div class="ri-tag"><i class="fas fa-globe"></i> Hydroclimatology</div>
         <div class="ri-tag"><i class="fas fa-temperature-high"></i> Climate Change</div>
         <div class="ri-tag"><i class="fas fa-water"></i> Hydrology</div>
         <div class="ri-tag"><i class="fas fa-satellite"></i> Remote Sensing & GIS</div>
-        <div class="ri-tag"><i class="fas fa-robot"></i> AI/ML for Environment</div>
+        <div class="ri-tag"><i class="fas fa-robot"></i> AI/ML for climate change </div>
       </div>
     </div>
   </div>
-  
-  <!-- About Me Section with Education & Awards -->
-  <section id="about-section">
-    <div style="max-width:1100px;margin:2.5em auto 1.5em auto;padding:0 1em;">
-      <hr style="margin-bottom:2em;">
-      <div style="font-family:'Georgia',serif;font-size:1.3rem;font-weight:700;color:#273964;letter-spacing:0.5px;margin-bottom:0.7em;">EDUCATION</div>
-      <ul style="font-size:1.06rem;margin-bottom:2em;list-style-type:disc;padding-left:1.2em;line-height:1.7;">
-        <li>
-          <span style="color:#254b97;font-weight:600;">Ph.D. in Environmental Science & Engineering</span> | Indian Institute of Technology (ISM), Dhanbad <br>
-          <span style="color:#666;font-size:0.98em;">July 2023 – Present</span>
-        </li>
-        <li>
-          <span style="color:#254b97;font-weight:600;">PG Diploma in Remote Sensing & GIS</span> | Banaras Hindu University (BHU), Varanasi <br>
-          <span style="color:#666;font-size:0.98em;">Aug 2022 – July 2023 &nbsp;&nbsp; (78.99%)</span>
-        </li>
-        <li>
-          <span style="color:#254b97;font-weight:600;">M.Sc. in Environmental Science</span> | Central University of Rajasthan, Ajmer <br>
-          <span style="color:#666;font-size:0.98em;">June 2019 – July 2021 &nbsp;&nbsp; (75.34%)</span>
-        </li>
-        <li>
-          <span style="color:#254b97;font-weight:600;">B.Sc. in Environmental Science</span> | Central University of Rajasthan, Ajmer <br>
-          <span style="color:#666;font-size:0.98em;">June 2016 – May 2019 &nbsp;&nbsp; (57.06%)</span>
-        </li>
-        <li>
-          <span style="color:#254b97;font-weight:600;">12th (Higher Secondary)</span> | Amarpur Inter College, Lakhisarai (BSEB Board) <br>
-          <span style="color:#666;font-size:0.98em;">May 2016 &nbsp;&nbsp; (61.40%)</span>
-        </li>
-        <li>
-          <span style="color:#254b97;font-weight:600;">10th (Matriculation)</span> | V.B. Balika Vidyapith, Lakhisarai (CBSE Board) <br>
-          <span style="color:#666;font-size:0.98em;">May 2013 &nbsp;&nbsp; (89.30%)</span>
-        </li>
-        <li>
-          <span style="color:#254b97;font-weight:600;">UGC NET Qualified (2022)</span>
-        </li>
-      </ul>
-      <div style="font-family:'Georgia',serif;font-size:1.3rem;font-weight:700;color:#273964;letter-spacing:0.5px;margin-bottom:0.7em;">AWARDS &amp; ACHIEVEMENTS</div>
-      <ul style="font-size:1.06rem;list-style-type:disc;padding-left:1.2em;line-height:1.7;">
-        <li>
-          <span style="color:#254b97;font-weight:600;">NGP-DST Summer School on Geospatial Technologies</span> | IIT (ISM) Dhanbad &nbsp; <span style="color:#666;font-size:0.98em;">June 2024</span>
-        </li>
-        <li>
-          <span style="color:#254b97;font-weight:600;">Green Skill Development Programme (Level 5, NSQF)</span> | MoEFCC &nbsp; <span style="color:#666;font-size:0.98em;">April 2022</span>
-        </li>
-        <li>
-          <span style="color:#254b97;font-weight:600;">UGC NET Qualified</span> | Environmental Science &nbsp; <span style="color:#666;font-size:0.98em;">2022</span>
-        </li>
-      </ul>
-    </div>
-  </section>
-  
-  <!-- LOGOS ROW: Below Banner -->
+
+  <!-- LOGOS ROW: top Banner -->
   <div style="background:#fff;padding:1.7rem 0 1rem 0;display:flex;justify-content:center;align-items:center;gap:2.2rem;box-shadow:0 2px 10px rgba(30,60,130,0.07);">
-    <img src="IIT-ISM.png" alt="IIT ISM Dhanbad" style="height:70px;">
-    <img src="bhu_logo.png" alt="BHU Varanasi" style="height:70px;">
-    <img src="curaj.jpg" alt="Central University of Rajasthan" style="height:70px;">
+    <img src="IIT-ISM.png" alt="IIT ISM Dhanbad" style="height:120px;">
+    <img src="bhu.jpg" alt="BHU Varanasi" style="height:120px;">
+    <img src="curaj.jpg" alt="Central University of Rajasthan" style="height:120px;">
   </div>
 
-  <!-- ABOUT SECTION: Current + Previous Education -->
+  <!-- ABOUT SECTION: Education background & Awards -->
   <section id="about-edu" style="background:#fafdff;padding:0 0 2.2rem 0;">
     <div style="max-width:900px;margin:2.5rem auto 0 auto;padding:0 1rem;">
       <h2 style="font-family:'Playfair Display',serif;font-size:1.4rem;color:#114674;margin-bottom:1.2rem;">About Me & Education</h2>
@@ -364,10 +315,22 @@
             <br><span style="color:#666;font-size:0.97em;">May 2013 (89.30%)</span>
           </li>
         </ul>
+        <h3 style="color:#273964;margin-bottom:1rem;margin-top:2.3rem;font-size:1.1rem;">Awards & Achievements</h3>
+        <ul style="font-size:1.06rem;list-style-type:disc;padding-left:1.2em;line-height:1.7;">
+          <li>
+            <span style="color:#254b97;font-weight:600;">NGP-DST Summer School on Geospatial Technologies</span> | IIT (ISM) Dhanbad &nbsp; <span style="color:#666;font-size:0.98em;">June 2024</span>
+          </li>
+          <li>
+            <span style="color:#254b97;font-weight:600;">Green Skill Development Programme (Level 5, NSQF)</span> | MoEFCC &nbsp; <span style="color:#666;font-size:0.98em;">April 2022</span>
+          </li>
+          <li>
+            <span style="color:#254b97;font-weight:600;">UGC NET Qualified</span> | Environmental Science &nbsp; <span style="color:#666;font-size:0.98em;">2022</span>
+          </li>
+        </ul>
       </div>
     </div>
   </section>
-  
+
   <!-- Contact Section with Google Map and Details -->
   <section id="contact" style="background: #f4f4f4;">
     <div style="max-width:1300px;margin:0 auto;padding:2.5rem 1rem;display:flex;align-items:center;justify-content:center;gap:2.5rem;flex-wrap:wrap;">
