--- a/index.html
+++ b/index.html
@@ -274,9 +274,9 @@
 
   <!-- LOGOS ROW: top Banner -->
   <div style="background:#fff;padding:1.7rem 0 1rem 0;display:flex;justify-content:center;align-items:center;gap:2.2rem;box-shadow:0 2px 10px rgba(30,60,130,0.07);">
-    <img src="IIT-ISM.png" alt="IIT ISM Dhanbad" style="height:120px;">
-    <img src="bhu.jpg" alt="BHU Varanasi" style="height:120px;">
-    <img src="curaj.jpg" alt="Central University of Rajasthan" style="height:120px;">
+    <img src="IIT-ISM.png" alt="IIT ISM Dhanbad" style="height:150px;">
+    <img src="bhu.jpg" alt="BHU Varanasi" style="height:150px;">
+    <img src="curaj.jpg" alt="Central University of Rajasthan" style="height:150px;">
   </div>
 
   <!-- ABOUT SECTION: Education background & Awards -->
@@ -288,7 +288,7 @@
         <ul style="list-style:disc;padding-left:1.1em;font-size:1.08rem;line-height:1.7;">
           <li>
             <b>Ph.D. (Ongoing)</b> – Environmental Science & Engineering, <span style="color:#254b97;">IIT (ISM) Dhanbad</span>
-            <br><span style="color:#bc2222;font-size:0.95em;">2022–present</span>
+            <br><span style="color:#bc2222;font-size:0.95em;">July 2023–present</span>
           </li>
         </ul>
         <h3 style="color:#273964;margin-bottom:1rem;margin-top:2.3rem;font-size:1.1rem;">Previous Education</h3>
