--- a/index.html
+++ b/index.html
@@ -295,23 +295,25 @@
         <ul style="list-style:disc;padding-left:1.1em;font-size:1.08rem;line-height:1.7;">
           <li>
             <b>PG Diploma</b> – Remote Sensing & GIS, <span style="color:#254b97;">Banaras Hindu University (BHU), Varanasi</span>
-            <br><span style="color:#666;font-size:0.97em;">Aug 2022 – July 2023 (78.99%)</span>
+            <br><span style="color:#666;font-size:0.97em;">Aug 2022 – July 2023</span>
+            <br><span style="color:#444;font-size:0.97em;">Project: Estimation of Land Surface Temperature through Atmospherically Corrected Landsat Image</span>
           </li>
           <li>
             <b>M.Sc.</b> – Environmental Science, <span style="color:#254b97;">Central University of Rajasthan, Ajmer</span>
-            <br><span style="color:#666;font-size:0.97em;">June 2019 – July 2021 (75.34%)</span>
+            <br><span style="color:#666;font-size:0.97em;">June 2019 – July 2021</span>
+            <br><span style="color:#444;font-size:0.97em;">Dissertation: Impact of Lockdown on Air Quality and Associated Health Issue: A Case Study of Patna City, Bihar</span>
           </li>
           <li>
             <b>B.Sc.</b> – Environmental Science, <span style="color:#254b97;">Central University of Rajasthan, Ajmer</span>
-            <br><span style="color:#666;font-size:0.97em;">June 2016 – May 2019 (57.06%)</span>
+            <br><span style="color:#666;font-size:0.97em;">June 2016 – May 2019</span>
           </li>
           <li>
             <b>12th (Higher Secondary)</b> – Amarpur Inter College, Lakhisarai (BSEB Board)
-            <br><span style="color:#666;font-size:0.97em;">May 2016 (61.40%)</span>
+            <br><span style="color:#666;font-size:0.97em;">May 2016</span>
           </li>
           <li>
             <b>10th (Matriculation)</b> – V.B. Balika Vidyapith, Lakhisarai (CBSE Board)
-            <br><span style="color:#666;font-size:0.97em;">May 2013 (89.30%)</span>
+            <br><span style="color:#666;font-size:0.97em;">May 2013</span>
           </li>
         </ul>
         <h3 style="color:#273964;margin-bottom:1rem;margin-top:2.3rem;font-size:1.1rem;">Awards & Achievements</h3>
