--- a/index.html
+++ b/index.html
@@ -306,14 +306,7 @@
           <li>
             <b>B.Sc.</b> – Environmental Science, <span style="color:#254b97;">Central University of Rajasthan, Ajmer</span>
             <br><span style="color:#666;font-size:0.97em;">June 2016 – May 2019</span>
-          </li>
-          <li>
-            <b>12th (Higher Secondary)</b> – Amarpur Inter College, Lakhisarai (BSEB Board)
-            <br><span style="color:#666;font-size:0.97em;">May 2016</span>
-          </li>
-          <li>
-            <b>10th (Matriculation)</b> – V.B. Balika Vidyapith, Lakhisarai (CBSE Board)
-            <br><span style="color:#666;font-size:0.97em;">May 2013</span>
+            <br><span style="color:#444;font-size:0.97em;">Minor Project: Pesticide Usage and its Impact on Farmers of Mundoti Village (Ajmer), Rajasthan: A Case Study</span>
           </li>
         </ul>
         <h3 style="color:#273964;margin-bottom:1rem;margin-top:2.3rem;font-size:1.1rem;">Awards & Achievements</h3>
