--- a/index.html
+++ b/index.html
@@ -298,52 +298,80 @@
     </div>
   </div>
   <!-- HOME SECTION -->
-  <section id="home-section" class="main-section">
-    <div class="main">
-      <div class="profile-block">
-        <img src="profile.jpg" class="profile-pic" alt="Rahul Kumar" style="width:200px;height:280px;object-fit:cover;">
-        <div class="profile-info">
-          <h1>Rahul Kumar</h1>
-          <div class="designation">Research Scholar</div>
-          <div class="institution">Department of Environmental Science & Engineering, IIT (ISM) Dhanbad</div>
-          <div class="contact-links">
-            <a href="mailto:rahulevs01@gmail.com" title="Email"><i class="fa fa-envelope"></i></a>
-            <a href="tel:9636525194" title="Phone"><i class="fa fa-phone"></i></a>
-            <a href="https://www.linkedin.com/in/23dr0122" title="LinkedIn" target="_blank"><i class="fab fa-linkedin"></i></a>
-            <a href="https://github.com/rahul4planet" title="GitHub" target="_blank"><i class="fab fa-github"></i></a>
-            <a href="https://orcid.org/0009-0004-7391-0731" title="ORCID" target="_blank"><i class="fab fa-orcid"></i></a>
-            <a href="https://scholar.google.com/citations?user=YOUR_GOOGLE_SCHOLAR_ID" title="Google Scholar" target="_blank"><i class="fas fa-graduation-cap"></i></a>
-            <a href="https://www.researchgate.net/profile/YOUR_RESEARCHGATE_ID" title="ResearchGate" target="_blank"><i class="fab fa-researchgate"></i></a>
-          </div>
-          <div>
-            <span style="color:#004cbb;font-weight:600;">Mobile:</span> 9636525194 <br>
-            <span style="color:#004cbb;font-weight:600;">Email:</span> rahulevs01@gmail.com
-          </div>
-        </div>
+<section style="max-width: 1300px; margin: 3em auto; background: lch(100% 0.01 296.81); border-radius: 20px; box-shadow: 0 6px 36px rgba(80,110,150,0.08); padding: 2.5em 2em; font-family: 'Inter', Arial, sans-serif;">
+  <div style="display: flex; flex-wrap: wrap; align-items: flex-start; gap: 2.3em;">
+    <!-- LEFT COLUMN: PHOTO & CONTACTS -->
+    <div style="flex: 0 0 260px; display: flex; flex-direction: column; align-items: center; min-width: 240px; max-width: 320px;">
+      <img src="profile.jpg" alt="Rahul Kumar profile photo" style="width:160px;height:220px;object-fit:cover;border-radius:15px;box-shadow:0 4px 16px rgba(40,80,160,0.14);border:2.5px solid #e7eaf2;background:#f5f7fa;display:block;">
+      <h1 style="color:#19386a;font-size:2.3rem;font-weight:800;margin:0.7em 0 0.3em 0;text-align:center;white-space:nowrap;">Rahul Kumar</h1>
+      <div style="font-size:1.13rem;color:#273964;font-weight:600;margin-bottom:0.2em;text-align:center;">
+        Research Scholar<br>Environmental Science & Engineering<br>
+        <span style="font-size:1rem;font-weight:400;color:#456;">IIT (ISM) Dhanbad</span>
       </div>
-      <div>
-        <div class="intro">Hi, welcome to my website!</div>
-        <div class="about-text">
-          I am Rahul Kumar, currently a research scholar at IIT (ISM) Dhanbad in the Department of Environmental Science & Engineering.
-          <br>
-          <ul class="edu-list">
-            <li>UGC NET Qualified (2022)</li>
-            <li>PG Diploma in Remote Sensing (BHU)</li>
-            <li>Integrated MSc in Environmental Science</li>
-          </ul>
-          I am passionate about solving real-world climate and water challenges using remote sensing, AI/ML, and geospatial techniques.
-        </div>
-        <div class="research-int">Research Interests:</div>
-        <div class="ri-tags">
-          <div class="ri-tag"><i class="fas fa-globe"></i> Hydroclimatology</div>
-          <div class="ri-tag"><i class="fas fa-temperature-high"></i> Climate Change</div>
-          <div class="ri-tag"><i class="fas fa-water"></i> Hydrology</div>
-          <div class="ri-tag"><i class="fas fa-satellite"></i> Remote Sensing & GIS</div>
-          <div class="ri-tag"><i class="fas fa-robot"></i> AI/ML for climate change </div>
-        </div>
+      <div class="contact-links" style="margin:0.7em 0 1.2em 0;text-align:center;display:flex;flex-direction:row;gap:0.5em;align-items:center;justify-content:center;flex-wrap:wrap;">
+        <a href="mailto:rahulevs01@gmail.com" title="Email" style="margin:0;"><i class="fa fa-envelope"></i></a>
+        <a href="tel:9636525194" title="Phone" style="margin:0;"><i class="fa fa-phone"></i></a>
+        <a href="https://www.linkedin.com/in/23dr0122" title="LinkedIn" target="_blank" style="margin:0;"><i class="fab fa-linkedin"></i></a>
+        <a href="https://github.com/rahul4planet" title="GitHub" target="_blank" style="margin:0;"><i class="fab fa-github"></i></a>
+        <a href="https://orcid.org/0009-0004-7391-0731" title="ORCID" target="_blank" style="margin:0;"><i class="fab fa-orcid"></i></a>
+        <a href="https://scholar.google.com/citations?user=YOUR_GOOGLE_SCHOLAR_ID" title="Google Scholar" target="_blank" style="margin:0;"><i class="fas fa-graduation-cap"></i></a>
+        <a href="https://www.researchgate.net/profile/YOUR_RESEARCHGATE_ID" title="ResearchGate" target="_blank" style="margin:0;"><i class="fab fa-researchgate"></i></a>
       </div>
     </div>
-    <!-- CONTACT SECTION (Home bottom) -->
+    <!-- RIGHT MAIN COLUMN -->
+    <div style="flex:1 1 320px; min-width:260px;">
+      <div style="font-size:1.17rem; color:#0f3057; font-weight:700;">Hi, welcome to my website!</div>
+      <div style="font-size:1.11rem;color:#2a334e;margin-bottom:1.1em;">
+        I am deeply committed to addressing real-world climate and water challenges using remote sensing, AI-ML, and geospatial technologies. My research focuses on uncertainties in climate projections for India, integrating hydrological data with advanced modeling, under the guidance of Prof. Riya Dutta.
+      </div>
+
+      <!-- RESEARCH INTERESTS -->
+      <div style="margin-bottom:0.8em;">
+        <span style="color:#265ea8;font-weight:700;">Research Interests:</span>
+        <ul style="margin:0.4em 0 0 1.1em;padding-left:0.5em;font-size:1rem;color:#253149;line-height:1.55;">
+          <li>Climate Change</li>
+          <li>Hydrology</li>
+          <li>Remote Sensing & GIS</li>
+          <li>AI/ML</li>
+          <li>Climate Data Apps</li>
+        </ul>
+      </div>
+
+      <!-- TECHNICAL SKILLS -->
+      <div style="margin-bottom:0.8em;">
+        <span style="color:#265ea8;font-weight:700;">Technical Skills:</span>
+        <ul style="margin:0.4em 0 0 1.1em;padding-left:0.5em;font-size:1rem;color:#253149;line-height:1.55;">
+          <li><i class="fas fa-code"></i> Python, R</li>
+          <li><i class="fas fa-map-marked-alt"></i> ArcGIS, QGIS, GEE</li>
+          <li><i class="fas fa-database"></i> Pandas, Numpy, Scikit-learn</li>
+          <li><i class="fas fa-chart-bar"></i> ggplot2, Matplotlib, Plotly</li>
+          <li><i class="fas fa-cloud"></i> Visual Studio Code, Jupyter, Colab, GitHub</li>
+        </ul>
+      </div>
+
+      <!-- KEY ACHIEVEMENTS -->
+      <div style="margin-bottom:0.8em;">
+        <span style="color:#265ea8;font-weight:700;">Key Achievements:</span>
+        <ul style="margin:0.4em 0 0 1.1em;padding-left:0.5em;font-size:1rem;color:#253149;line-height:1.55;">
+          <li>UGC NET Qualified (2022)</li>
+          <li>PG Diploma in Remote Sensing (BHU)</li>
+          <li>Integrated MSc in Environmental Science</li>
+          <li>Under development: monitoring web portal for India</li>
+        </ul>
+      </div>
+
+      <!-- DID YOU KNOW -->
+      <div style="background:#f7faff;border-left:4px solid #3881e6;border-radius:10px;padding:0.9em 1.1em;margin-top:1em;font-size:1rem;color:#254b97;">
+        <strong>Did you know?</strong>
+        <ul style="margin:0.45em 0 0 1em;padding-left:0.2em;line-height:1.5;color:#253149;">
+          <li>Climate change is expected to increase the frequency and intensity of extreme weather events in India.</li>
+          <li>Remote sensing technology can provide critical data for monitoring and managing water resources.</li>
+          <li>AI and machine learning are being used to improve climate models and predictions.</li>
+        </ul>
+      </div>
+    </div>
+  </div>
+  <!-- CONTACT SECTION (Home bottom) -->
     <section style="background:#f7f7f7;padding:2.5em 0;">
       <div style="max-width:1400px;margin:0 auto;display:flex;flex-wrap:wrap;justify-content:center;align-items:stretch;gap:2.5em;">
         <!-- Map -->
@@ -365,17 +393,14 @@
           <div style="text-align:center;">
             <div style="font-size:2.2rem;font-family:'Inter',sans-serif;color:#183153;font-weight:700;margin-bottom:0.7em;letter-spacing:0.5px;text-decoration: underline;">Contacts</div>
             <div style="font-size:1.07rem;margin-bottom:1em;">
-              <span style="color:#e94f37;font-weight:700;">Office:</span><br>
               Water Security and Climate Change lab<br>
               Department of Environmental Science & Engineering<br>
               IIT (ISM) Dhanbad, Jharkhand, INDIA
             </div>
             <div style="font-size:1.08rem;margin-bottom:1em;">
-              <span style="color:#e94f37;font-weight:700;">Mobile:</span><br>
               (+91) 9636525194
             </div>
             <div style="font-size:1.08rem;">
-              <span style="color:#e94f37;font-weight:700;">Email:</span><br>
               rahulevs01@gmail.com
             </div>
           </div>
@@ -432,6 +457,53 @@
             <span style="color:#254b97;font-weight:600;">UGC NET Qualified</span> | Environmental Science &nbsp; <span style="color:#666;font-size:0.98em;">2022</span>
           </li>
         </ul>
+        <h2 style="color:#183153;font-size:1.25rem;margin-top:2.2em;margin-bottom:0.7em;">Skill Highlights</h2>
+        <div style="margin-bottom:2em;">
+          <h3 style="color:#254b97;font-size:1.13rem;margin-bottom:0.7em;"></h3>
+          <p style="font-size:1.13rem;line-height:1.7;margin-bottom:1.2em;">
+          <h3 style="color:#254b97;font-size:1.13rem;margin-bottom:0.7em;">Core Skills</h3>
+          <ul style="font-size:1.08rem;line-height:1.7;margin-bottom:1.2em;list-style-type:disc;padding-left:1.2em;">
+            <li><b>Programming & Data Science</b>
+              <ul style="margin-top:0.3em;">
+                <li><b>Languages:</b> R, Python</li>
+                <li><b>Statistical Computing:</b> Data analysis, machine learning, predictive modeling</li>
+                <li><b>Libraries/Frameworks:</b> Pandas, Numpy, Scikit-learn, ggplot2, Matplotlib, Plotly</li>
+              </ul>
+            </li>
+            <li><b>Geospatial & Remote Sensing</b>
+              <ul style="margin-top:0.3em;">
+                <li><b>GIS Software:</b> ArcGIS, QGIS</li>
+                <li><b>Remote Sensing:</b> Google Earth Engine, MODIS, ERA5-Land, MERRA-2</li>
+                <li><b>Spatial Analysis:</b> Map creation, spatial modeling, GIS analytics</li>
+              </ul>
+            </li>
+            <li><b>Climate Science Expertise</b>
+              <ul style="margin-top:0.3em;">
+                <li><b>Climate Modeling:</b> VIC model, CMIP6, Bayesian Networks, Bias Correction</li>
+                <li><b>Hydroclimatology:</b> Water resource assessment, drought/flood analysis</li>
+                <li><b>Big Data in Climate:</b> Processing and visualizing large climate datasets</li>
+              </ul>
+            </li>
+            <li><b>Visualization & Communication</b>
+              <ul style="margin-top:0.3em;">
+                <li><b>Data Visualization:</b> Advanced charting, interactive dashboards, web-based visual tools</li>
+                <li><b>Scientific Writing:</b> Preparation of research articles, reports, technical documentation</li>
+                <li><b>Outreach:</b> Development of web portals and digital resources for climate science dissemination</li>
+              </ul>
+            </li>
+          </ul>
+          <h3 style="color:#254b97;font-size:1.13rem;margin-bottom:0.7em;">Focus Areas</h3>
+          <ul style="font-size:1.08rem;line-height:1.7;list-style-type:disc;padding-left:1.2em;">
+            <li>Water security and hydroclimatology under climate change scenarios</li>
+            <li>Integration of AI and machine learning in environmental research</li>
+            <li>Development of open-access digital tools for scientific and public use</li>
+            <li>Policy-relevant modeling and data visualization for sustainable development</li>
+            <li>Collaborative research across environmental, data science, and policy domains</li>
+          </ul>
+          <p style="font-size:1.13rem;line-height:1.7;margin-top:1.5em;font-style:italic;color:#183153;">
+            I am committed to bridging advanced climate science with real-world applications through innovation in programming, geospatial analytics, and digital technology.
+          </p>
+        </div>
       </div>
     </div>
   </section>
@@ -451,12 +523,11 @@
     <div style="max-width:1100px;margin:0 auto;padding:2.5rem 1rem 0 1rem;">
       <h1 style="font-family:'Playfair Display',serif;font-size:2rem;color:#114674;text-align:center;margin-bottom:0.7em;">Monitoring and Early Warning System<br><span style="font-size:1.1rem;font-weight:400;color:#b71c1c;">(Experimental)</span></h1>
       <p style="text-align:center;font-size:1.13rem;color:#bc2222;margin-bottom:2.2rem;">The web portals are under development and will be published soon!</p>
-      <div style="display:flex;justify-content:center;margin-bottom:2.5rem;">
-        <video controls style="max-width:100%;border-radius:14px;box-shadow:0 2px 14px #e5ebfa;" poster="Rahul landsat.png">
-          <source src="GISTEMP_Spiral_60sec_F.m4v" type="video/mp4">
-          Your browser does not support the video tag.
-        </video>
+      <div style="margin-bottom:2.5rem;">
+        <!-- Leaflet Map Embed -->
+        <div id="map" style="cursor: crosshair; height: 60%; position: relative; display: block; outline-style: none;" class="leaflet-container leaflet-touch leaflet-retina leaflet-fade-anim leaflet-grab leaflet-touch-drag leaflet-touch-zoom" tabindex="0"></div>
       </div>
+    </div>
   </section>
 
   <!-- RESOURCES SECTION -->
